change lang delimiter from comma to pipe

--- a/src/fixtures/geosearch/lang/lang.csv
+++ b/src/fixtures/geosearch/lang/lang.csv
@@ -1,9 +1,9 @@
-key,enValue,enValid,frValue,frValid
-geosearch.title,Geolocation Search,1,Recherche géolocalisée,1
-geosearch.noResults,No results to show for ,1,Aucun résultat à afficher pour ,1
-geosearch.searchText,Search for a location...,1,Rechercher un emplacement...,1
-geosearch.visible,Visible on map,1,Visible sur la carte,1
-geosearch.filters.province,Province,1,Province,1
-geosearch.filters.type,Type,1,Type,1
-geosearch.filters.clear,Clear filters,1,Effacer les filtres,1
-geosearch.serviceError,No response from {services} service(s),1,Pas de réponse de la part des services de {services},1
+key|enValue|enValid|frValue|frValid
+geosearch.title|Geolocation Search|1|Recherche géolocalisée|1
+geosearch.noResults|No results to show for |1|Aucun résultat à afficher pour |1
+geosearch.searchText|Search for a location...|1|Rechercher un emplacement...|1
+geosearch.visible|Visible on map|1|Visible sur la carte|1
+geosearch.filters.province|Province|1|Province|1
+geosearch.filters.type|Type|1|Type|1
+geosearch.filters.clear|Clear filters|1|Effacer les filtres|1
+geosearch.serviceError|No response from {services} service(s)|1|Pas de réponse de la part des services de {services}|1
