--- a/src/fixtures/appbar/lang/lang.csv
+++ b/src/fixtures/appbar/lang/lang.csv
@@ -1,5 +1,5 @@
-key,enValue,enValid,frValue,frValid
-appbar.navigation,Navigation,1,Navigation,1
-appbar.more,More,1,Plus,1
-navigation.export,Export,1,Exporter,1
-navigation.map.export,Export Map,1,Exporter la Carte,1
+key|enValue|enValid|frValue|frValid
+appbar.navigation|Navigation|1|Navigation|1
+appbar.more|More|1|Plus|1
+navigation.export|Export|1|Exporter|1
+navigation.map.export|Export Map|1|Exporter la Carte|1
