--- a/src/fixtures/areas-of-interest/lang/lang.csv
+++ b/src/fixtures/areas-of-interest/lang/lang.csv
@@ -1,3 +1,3 @@
-key,enValue,enValid,frValue,frValid
-areas-of-interest.title,Areas of Interest,1,Zones d'intérêt,1
-areas-of-interest.select,Select area of interest,1,Sélectionner la zone d'intérêt,1
+key|enValue|enValid|frValue|frValid
+areas-of-interest.title|Areas of Interest|1|Zones d'intérêt|1
+areas-of-interest.select|Select area of interest|1|Sélectionner la zone d'intérêt|1
