--- a/src/fixtures/basemap/lang/lang.csv
+++ b/src/fixtures/basemap/lang/lang.csv
@@ -1,3 +1,3 @@
-key,enValue,enValid,frValue,frValid
-basemap.select,Select basemap,1,Sélectionner la carte de base,1
-basemap.title,Basemap,1,Carte de base,1
+key|enValue|enValid|frValue|frValid
+basemap.select|Select basemap|1|Sélectionner la carte de base|1
+basemap.title|Basemap|1|Carte de base|1
