--- a/src/fixtures/overviewmap/lang/lang.csv
+++ b/src/fixtures/overviewmap/lang/lang.csv
@@ -1,3 +1,3 @@
-key,enValue,enValid,frValue,frValid
-overviewmap.expand,Expand Overview,1,Développer l'aperçu,1
-overviewmap.minimize,Minimize Overview,1,Réduire l'aperçu,1
+key|enValue|enValid|frValue|frValid
+overviewmap.expand|Expand Overview|1|Développer l'aperçu|1
+overviewmap.minimize|Minimize Overview|1|Réduire l'aperçu|1
