--- a/src/fixtures/wizard/lang/lang.csv
+++ b/src/fixtures/wizard/lang/lang.csv
@@ -1,49 +1,49 @@
-key,enValue,enValid,frValue,frValid
-wizard.title,Import Layer,1,Importer un fichier,1
-wizard.upload.title,Upload data,1,Charger des données,1
-wizard.upload.or,or,1,ou,1
-wizard.upload.file.label,Upload a file,1,Télécharger un fichier,1
-wizard.upload.file.help,Drop or select a file to upload,1,Déposer ou sélectionner un fichier à télécharger,1
-wizard.upload.file.error.failed,File upload failed,1,Le téléchargement du fichier a échoué,1
-wizard.upload.url.label,URL to file or service,1,URL vers fichier ou service,1
-wizard.upload.url.error.required,URL is required,1,L'URL est requise,1
-wizard.upload.url.error.url,Please enter a valid URL,1,Veuillez saisir une adresse URL valide,1
-wizard.format.title,Select format,1,Choisir un format,1
-wizard.format.type.service,Service type,1,Type de service,1
-wizard.format.type.file,File format,1,Format du fichier,1
-wizard.format.type.error.required,Service or file type is required,1,Le service ou le type de fichier est requis,1
-wizard.format.type.error.invalid,Invalid file or service type,1,Type de fichier ou de service non valide,1
-wizard.format.type.error.failure,Failed to load data from file/service,1,Échec du chargement des données à partir du fichier/service,1
-wizard.format.info.cors,Service needs to be CORS enabled,1,Le service doit être compatible CORS.,1
-wizard.format.warn.cors,Service may not support CORS,1,Le service ne pend peut-être pas en charge CORS.,1
-wizard.format.warn.vpn,Service may require a VPN connection,1,Le service peut nécessiter une connexion RPV,1
-wizard.fileType.csv,CSV,1,CSV,1
-wizard.fileType.shapefile,zipped Shapefile,1,Shapefile zippé,1
-wizard.fileType.geojson,GeoJSON,1,GeoJSON,1
-wizard.layerType.esriFeature,ESRI Feature Layer,1,Couche d'éléments d'ESRI,1
-wizard.layerType.esriMapImage,ESRI Map Image Layer,1,Couche d'image de la carte ESRI,1
-wizard.layerType.esriImagery,ESRI Imagery Layer,1,Couche d'imagerie d'ESRI,1
-wizard.layerType.esriTile,ESRI Tile Layer,1,Couche de tuiles d'ESRI,1
-wizard.layerType.ogcWms,OGC Web Map Service,1,Couche WMS de l'OGC,1
-wizard.layerType.ogcWfs,OGC Web Feature Service,1,Service d'entités Web OGC,1
-wizard.configure.title,Configure layer,1,Configurer la couche,1
-wizard.configure.name.error.required,Name is required,1,Le champ Nom est obligatoire,1
-wizard.configure.name.label,Layer Name,1,Nom de la couche,1
-wizard.configure.nameField.label,Primary Field,1,Champ clé,1
-wizard.configure.tooltipField.label,Tooltip Field,1,Champ infobulle,1
-wizard.configure.latField.label,Latitude Field,1,Champ latitude,1
-wizard.configure.longField.label,Longitude Field,1,Champ longitude,1
-wizard.configure.sublayers.error.required,Sublayers are required,1,Des sous-couches sont requises,1
-wizard.configure.sublayers.label,Layers,1,Couches,1
-wizard.configure.sublayers.results,No results,1,Aucun résultat,1
-wizard.configure.sublayers.search,Search layers,1,Rechercher des couches,1
-wizard.configure.sublayers.select,Select layer(s),1,Sélectionner les couches,1
-wizard.configure.sublayers.nested,Nested,1,Imbriquées,1
-wizard.configure.colour.label,Colour,1,Couleur,1
-wizard.configure.colour.hue,Hue,1,Teinte,1
-wizard.configure.colour.copy,Copy colour,1,Copier la couleur,1
-wizard.configure.colour.hex,Hex,1,Hex,1
-wizard.step.cancel,Cancel,1,Annuler,1
-wizard.step.continue,Continue,1,Continuer,1
-wizard.upload.success,has been uploaded successfully.,1,a été téléversé avec succès.,1
-wizard.upload.fail,failed to upload.,1,n'a pas pu être téléversé.,1
+key|enValue|enValid|frValue|frValid
+wizard.title|Import Layer|1|Importer un fichier|1
+wizard.upload.title|Upload data|1|Charger des données|1
+wizard.upload.or|or|1|ou|1
+wizard.upload.file.label|Upload a file|1|Télécharger un fichier|1
+wizard.upload.file.help|Drop or select a file to upload|1|Déposer ou sélectionner un fichier à télécharger|1
+wizard.upload.file.error.failed|File upload failed|1|Le téléchargement du fichier a échoué|1
+wizard.upload.url.label|URL to file or service|1|URL vers fichier ou service|1
+wizard.upload.url.error.required|URL is required|1|L'URL est requise|1
+wizard.upload.url.error.url|Please enter a valid URL|1|Veuillez saisir une adresse URL valide|1
+wizard.format.title|Select format|1|Choisir un format|1
+wizard.format.type.service|Service type|1|Type de service|1
+wizard.format.type.file|File format|1|Format du fichier|1
+wizard.format.type.error.required|Service or file type is required|1|Le service ou le type de fichier est requis|1
+wizard.format.type.error.invalid|Invalid file or service type|1|Type de fichier ou de service non valide|1
+wizard.format.type.error.failure|Failed to load data from file/service|1|Échec du chargement des données à partir du fichier/service|1
+wizard.format.info.cors|Service needs to be CORS enabled|1|Le service doit être compatible CORS.|1
+wizard.format.warn.cors|Service may not support CORS|1|Le service ne pend peut-être pas en charge CORS.|1
+wizard.format.warn.vpn|Service may require a VPN connection|1|Le service peut nécessiter une connexion RPV|1
+wizard.fileType.csv|CSV|1|CSV|1
+wizard.fileType.shapefile|zipped Shapefile|1|Shapefile zippé|1
+wizard.fileType.geojson|GeoJSON|1|GeoJSON|1
+wizard.layerType.esriFeature|ESRI Feature Layer|1|Couche d'éléments d'ESRI|1
+wizard.layerType.esriMapImage|ESRI Map Image Layer|1|Couche d'image de la carte ESRI|1
+wizard.layerType.esriImagery|ESRI Imagery Layer|1|Couche d'imagerie d'ESRI|1
+wizard.layerType.esriTile|ESRI Tile Layer|1|Couche de tuiles d'ESRI|1
+wizard.layerType.ogcWms|OGC Web Map Service|1|Couche WMS de l'OGC|1
+wizard.layerType.ogcWfs|OGC Web Feature Service|1|Service d'entités Web OGC|1
+wizard.configure.title|Configure layer|1|Configurer la couche|1
+wizard.configure.name.error.required|Name is required|1|Le champ Nom est obligatoire|1
+wizard.configure.name.label|Layer Name|1|Nom de la couche|1
+wizard.configure.nameField.label|Primary Field|1|Champ clé|1
+wizard.configure.tooltipField.label|Tooltip Field|1|Champ infobulle|1
+wizard.configure.latField.label|Latitude Field|1|Champ latitude|1
+wizard.configure.longField.label|Longitude Field|1|Champ longitude|1
+wizard.configure.sublayers.error.required|Sublayers are required|1|Des sous-couches sont requises|1
+wizard.configure.sublayers.label|Layers|1|Couches|1
+wizard.configure.sublayers.results|No results|1|Aucun résultat|1
+wizard.configure.sublayers.search|Search layers|1|Rechercher des couches|1
+wizard.configure.sublayers.select|Select layer(s)|1|Sélectionner les couches|1
+wizard.configure.sublayers.nested|Nested|1|Imbriquées|1
+wizard.configure.colour.label|Colour|1|Couleur|1
+wizard.configure.colour.hue|Hue|1|Teinte|1
+wizard.configure.colour.copy|Copy colour|1|Copier la couleur|1
+wizard.configure.colour.hex|Hex|1|Hex|1
+wizard.step.cancel|Cancel|1|Annuler|1
+wizard.step.continue|Continue|1|Continuer|1
+wizard.upload.success|has been uploaded successfully.|1|a été téléversé avec succès.|1
+wizard.upload.fail|failed to upload.|1|n'a pas pu être téléversé.|1
