--- a/src/fixtures/mapnav/lang/lang.csv
+++ b/src/fixtures/mapnav/lang/lang.csv
@@ -1,6 +1,6 @@
 key|enValue|enValid|frValue|frValid
-mapnav.zoomIn|Zoom In|1|Zoom avant|1
-mapnav.zoomOut|Zoom Out|1|Zoom arrière|1
+mapnav.zoomIn|Zoom, In|1|Zoom, avant|1
+mapnav.zoomOut|Zoom, Out|1|Zoom, arrière|1
 mapnav.home|Home|1|Accueil|1
 mapnav.fullscreen|Full Screen|1|Plein Écran|1
 mapnav.geolocator|Your Location|1|Votre position|1
