--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -12,8 +12,8 @@ keyboardInstructions.app|"Use 'Tab' to navigate between sections of the applicat
 keyboardInstructions.lists|"Use the arrow keys to move between items in lists. With a list item selected you can press 'Space' or 'Enter' to click the item. You can also navigate within the list item using 'Tab'."|1|"Lorsqu'un élément de la liste est sélectionné| vous pouvez appuyer sur « Espace » ou « Entrée » pour cliquer sur l'élément. Vous pouvez également vous déplacer au sein de l'élément de la liste au moyen de la touche « Tab »."|1
 keyboardInstructions.map|"When the map is selected| use the arrow keys to move around and 'Enter' to select a point."|1|"Lorsque la carte est sélectionnée| utilisez le pavé curseur pour vous déplacer et appuyez sur « Entrée »  pour sélectionner un point."|1
 keyboardInstructions.OK|OK|1|OK|1
-map.toggleScaleToMetric|Switch to metric map scale|1|Passer à l'échelle métrique|1
-map.toggleScaleToImperial|Switch to imperial map scale|1|Passer à l'échelle impériale|1
+map.toggleScaleToMetric|Switch to metric, map scale|1|Passer à, l'échelle métrique|1
+map.toggleScaleToImperial|Switch to imperial, map scale|1|Passer à l'échelle, impériale|1
 map.coordinates.east|E|1|E|1
 map.coordinates.west|W|1|O|1
 map.coordinates.north|N|1|N|1
@@ -26,7 +26,7 @@ map.language.curr|current|1|actuel|1
 map.export|export map|1|exporter la carte|1
 notifications.open|Open Notifications Panel|1|Ouvrir la fenêtre des notifications|1
 notifications.title|Notifications|1|Notifications|1
-notifications.empty|No new notifications.|1|Aucune nouvelle notification.|1
+notifications.empty|No new, notifications.|1|Aucune nouvelle, notification.|1
 notifications.controls.dismiss|Dismiss|1|Rejeter|1
 notifications.controls.expand|Expand|1|Développer|1
 notifications.controls.collapse|Collapse|1|Réduire|1
