--- a/src/fixtures/legend/lang/lang.csv
+++ b/src/fixtures/legend/lang/lang.csv
@@ -9,7 +9,7 @@ legend.header.visible,Toggle Visibility,1,Basculer la Visibilité,1
 legend.header.visible.show,Show All,1,Montrer tout,1
 legend.header.visible.hide,Hide All,1,Cacher tout,1
 legend.group.expand,Expand Group,1,Développer un groupe,1
-legend.group.collapse,Collapse Group,1,Réduire un groupe,1
+legend.group.collapse,"Collapse, Group",1,"Réduire, un groupe",1
 legend.visibility.showLayer,Show layer,1,Afficher la couche,1
 legend.visibility.hideLayer,Hide layer,1,Masquer la couche,1
 legend.visibility.showSymbol,Show symbol,1,Afficher le symbole,1
