--- a/src/fixtures/details/lang/lang.csv
+++ b/src/fixtures/details/lang/lang.csv
@@ -1,9 +1,12 @@
 key,enValue,enValid,frValue,frValid
-details.layers.title,Identified Layers,1,Couches désignées,1
+details.layers.title.identifyOrigin,Identify Details,1,Identifier les détails,0
+details.layers.title.gridOrigin,Details,1,Détails,1
 details.layers.found,Found {numResults} results in {numLayers} layers,1,{numResults} résultats trouvés dans {numLayers} couches,1
 details.layers.loading,The layer is loading...,1,La couche est en cours de chargement...,1
 details.layers.error,Error,1,Erreur,1
-details.layers.results.empty,No results found for the selected layer.,1,Aucun résultat trouvé pour la couche sélectionnée.,1
+details.layers.results.empty,No results found for any layer.,1,Aucun résultat trouvé pour aucune couche.,0
+details.layers.results.empty.currentLayer,No results found for the selected layer.,1,Aucun résultat trouvé pour la couche sélectionnée.,1
+details.layers.results.empty.noLayers,No layers for identification.,1,Pas de couches pour l'identification.,0
 details.result.default.name,Identify Item {0},1,Désigner l'élément {0},1
 details.items.title,Details,1,Détails,1
 details.item.see.list,See List,1,Voir la liste,1
