display panel title tooltip on keyboard focus

--- a/src/fixtures/legend/lang/lang.csv
+++ b/src/fixtures/legend/lang/lang.csv
@@ -1,5 +1,5 @@
 key,enValue,enValid,frValue,frValid
-legend.title,Legend,1,Légende,1
+legend.title,Legenddddddddddddddddddddddddddddddddddddddddddddddddddddd,1,Légende,1
 legend.header.addlayer,Add Layer,1,Ajouter une couche,1
 legend.header.reorderlayers,Reorder Layers,1,Réorganiser les couches,1
 legend.header.groups,Toggle Groups,1,Basculer les Groupes,1
